Final template added

--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -6,7 +6,8 @@
   <!--app-body-->
   <div class="body flex-grow-1 px-3">
     <c-container breakpoint="lg" class="h-auto">
-      <router-outlet />
+      <h3>Hello everyone,</h3>
+      <p>Welcome to Task Management Project</p>
     </c-container>
   </div>
   <!--app footer-->
